--- a/about.html
+++ b/about.html
@@ -3,4 +3,22 @@
 	<head>
 		<title>Text to be written</title>
 	</head>
+
+	<body>
+		<nav> Below a list of publications:
+
+    		<ul>
+        		<li><a href="p1">p1</a></li>
+	        	<li><a href="p1">p2</a></li>
+        		<li><a href="p1">p3</a></li>
+    		</ul>
+		</nav>
+		<footer>
+    		<ul>
+        		<li><a href="mailto:testmail@testmail.com">email</a></li>
+        		<li><a href="https://github.com/fserva">github.com/fserva</a></li>
+			</ul>
+		</footer>
+	</body>
+
 </html>
