--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 		<nav> Below a list of publications:
 
     		<ul>
-        		<li><a href="p1">p1</a></li>
+        		<li><a href="https://gmd.copernicus.org/articles/11/1009/2018/gmd-11-1009-2018.html">
+                               Butchart et al., GMD, 2018</a></li>
 	        	<li><a href="p1">p2</a></li>
         		<li><a href="p1">p3</a></li>
     		</ul>
