--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Test title</title>
-	</head>
+<html lang="en">
+<head>
+<title>My webpage</title>
+
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Research</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Teaching</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Publications</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Outreach</a>
+  </div>
+</div>
+
+</head>
 	<body>
 		<nav>
     		<ul>
