--- a/index.html
+++ b/index.html
@@ -2,40 +2,25 @@
 <html lang="en">
 <head>
 <title>My webpage</title>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Research</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Teaching</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Publications</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Outreach</a>
-  </div>
-</div>
-
 </head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello world</h1>
-				<p>Text1 <em>Text2</em> Text3 <a href="/about">Link to about</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:testmail@testmail.com">email</a></li>
-        		<li><a href="https://github.com/fserva">github.com/fserva</a></li>
-			</ul>
-		</footer>
-	</body>
+
+<head>
+<div class="container">
+<div class="blurb">
+<p>
+<a href="/about"> About </a>
+<a href="/research"> Research </a>
+<a href="/teaching"> Teaching </a>
+<a href="/publications"> Publications </a>
+<a href="/outreach"> Outreach </a>
+</p>
+</head>
+
+<body>
+<nav>
+<ul>
+<li><a href="mailto:federico.serva@terrarum.eu">E-mail</a></li>
+<li><a href="https://github.com/fserva">github</a></li>
+<li><a href="https://publons.com/researcher/3116433/federico-serva/">Publons</a></li>
+</ul>
 </html>
