--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<body style="font-family: Monospace">
 <head>
 <title>My webpage</title>
 </head>
@@ -16,11 +18,12 @@
 </p>
 </head>
 
-<body>
 <nav>
 <ul>
 <li><a href="mailto:federico.serva@terrarum.eu">E-mail</a></li>
 <li><a href="https://github.com/fserva">github</a></li>
 <li><a href="https://publons.com/researcher/3116433/federico-serva/">Publons</a></li>
 </ul>
+
+</body>
 </html>
