test colors and text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <body style="font-family: Monospace">
 <head>
-<title>My webpage</title>
+<title>Welcome to the webpage of F. Serva</title>
 </head>
 
-<head>
+<head style="background-color:#33475b">
 <div class="container">
 <div class="blurb">
 <p>
@@ -18,12 +18,15 @@
 </p>
 </head>
 
+Find below my coordinates:
+
 <nav>
 <ul>
 <li><a href="mailto:federico.serva@terrarum.eu">E-mail</a></li>
 <li><a href="https://github.com/fserva">github</a></li>
 <li><a href="https://publons.com/researcher/3116433/federico-serva/">Publons</a></li>
 </ul>
+</nav>
 
 </body>
 </html>
