--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<body style="font-family: Monospace">
 <head>
 <title>Welcome to the webpage of F. Serva</title>
 </head>
 
-<head style="background-color:#33475b">
+<body style="font-family: Monospace">
+<body style="background-color:#33475b">
 <div class="container">
 <div class="blurb">
 <p>
@@ -16,9 +16,9 @@
 <a href="/publications"> Publications </a>
 <a href="/outreach"> Outreach </a>
 </p>
-</head>
+</body>
 
-Find below my coordinates:
+Please find below my coordinates:
 
 <nav>
 <ul>
