--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </p>
 </body>
 
-<img src="images/squares.png">
+<img src="images/squares.png" alt="not found" style="display:block">
 
 Please find below my coordinates:
 
