--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </p>
 </body>
 
-<img src="images/squares.png" alt="not found" style="display:block">
+<img style="float: left; padding: 10px 5px 10px 5px;" src="images/squares.png" alt="not found" style="display:block">
 
 Please find below my coordinates:
 
