--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 </p>
 </body>
 
-<img style="float: left; padding: 10px 5px 10px 5px;" src="images/squares.png" alt="not found" style="display:block">
+<img src="images/squares.png" alt="not found" style="display:block">
 
+<p>
 Please find below my coordinates:
+</p>
 
 <nav>
 <ul>
