--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div class="container">
 <div class="blurb">
 <p>
-<a href="/about"> About </a>
-<a href="/research"> Research </a>
+<a href="/about"> <mark style="color: lightgray;"> About </mark> </a>
+<a href="/research"></a>
 <a href="/teaching"> Teaching </a>
 <a href="/publications"> Publications </a>
 <a href="/outreach"> Outreach </a>
