--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 <div class="blurb">
 <p>
-<a href="/about"> <mark style="color: lightgray;"> About </mark> </a>
+<a href="/about"><font size="+2">About</font></a>
 <a href="/research"></a>
 <a href="/teaching"> Teaching </a>
 <a href="/publications"> Publications </a>
