--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <div class="blurb">
 <p>
 <a href="/about"><font size="+2">About</font></a>
-<a href="/research"></a>
-<a href="/teaching"> Teaching </a>
-<a href="/publications"> Publications </a>
-<a href="/outreach"> Outreach </a>
+<a href="/research"><font size="+2">Research</font></a>
+<a href="/teaching"><font size="+2">Teaching</font></a>
+<a href="/publications"><font size="+2">Publications</font></a>
+<a href="/outreach"><font size="+2">Outreach</font></a>
 </p>
 </body>
 
