--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<title>Welcome to the webpage of F. Serva</title>
+<title>Federico's webpage</title>
 </head>
 
 <body style="font-family: Monospace">
@@ -22,6 +22,18 @@
 <br>
 <br>
 
+<font size="+1">
+Currently I am a postdoctoral researcher at the
+<a href="https://philab.phi.esa.int/">ESA Philab</a> and the Italian Space Agency.
+<br>
+My work is focused on the retrieval of parameters from multi and hyperspectral 
+imaging and on the study of weather and climate processes with AI.
+I am interested in climate modeling, model development and evaluation.
+</font>
+
+<br>
+<br>
+
 <p>
 Please find below my coordinates:
 </p>
@@ -30,6 +42,7 @@ Please find below my coordinates:
 <ul>
 <li><a href="mailto:federico.serva@terrarum.eu">E-mail</a></li>
 <li><a href="https://github.com/fserva">github</a></li>
+<li><a href="https://orcid.org/0000-0002-7118-0817">ORCID</a></li>
 <li><a href="https://publons.com/researcher/3116433/federico-serva/">Publons</a></li>
 </ul>
 </nav>
