--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
 <div class="blurb">
 <p>
-<a href="/about"><font size="+2">About</font></a>
+<!--<a href="/about"><font size="+2">About</font></a>-->
 <a href="/research"><font size="+2">Research</font></a>
 <a href="/teaching"><font size="+2">Teaching</font></a>
 <a href="/publications"><font size="+2">Publications</font></a>
