--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 <br>
 
 <font size="+1">
+<pre>
 Currently I am a postdoctoral researcher at the
 <a href="https://philab.phi.esa.int/">ESA Philab</a> and the Italian Space Agency.
 <br>
 My work is focused on the retrieval of parameters from multi and hyperspectral 
 imaging and on the study of weather and climate processes with AI.
 I am interested in climate modeling, model development and evaluation.
+</pre>
 </font>
 
 <br>
