note for about section

--- a/about.html
+++ b/about.html
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Text to be written</title>
-	</head>
+<head>
+<title>Federico's webpage: about</title>
+</head>
 
-	<body>
-		<nav> Below a list of publications:
-
-    		<ul>
-        		<li><a href="https://gmd.copernicus.org/articles/11/1009/2018/gmd-11-1009-2018.html">
-                               Butchart et al., GMD, 2018</a></li>
-	        	<li><a href="p1">p2</a></li>
-        		<li><a href="p1">p3</a></li>
-    		</ul>
-		</nav>
-		<footer>
-    		<ul>
-        		<li><a href="mailto:testmail@testmail.com">email</a></li>
-        		<li><a href="https://github.com/fserva">github.com/fserva</a></li>
-			</ul>
-		</footer>
-	</body>
+<body>
+Short summary of professional activities goes here
+</body>
 
 </html>
