--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,9 @@
 
 <body>
 <pre>
+Click <a href="index.html">here</a> to go back to main page.
+
+
 Here you can find a list of peer-reviewed publications. 
 Please reach out for more information.
 
@@ -31,13 +34,15 @@ Please reach out for more information.
 </ul>
 
 2019
+<ul>
 <li><a href="https://doi.org/10.1002/qj.3690">Smith et al., QJ, 2019</a>
-
+</ul>
 
 2018
+<ul>
 <li><a href="https://doi.org/10.1029/2018MS001297">Serva et al., JAMES, 2018</a>
 <li><a href="https://doi.org/10.5194/gmd-11-1009-2018">Butchart et al., GMD, 2018</a>
-
+</ul>
 </pre>
 
 </body>
