--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@
 <pre>
 Click <a href="index.html">here</a> to go back to main page.
 
+<font size="+1">
 
 Here you can find a list of peer-reviewed publications. 
 Please reach out for more information.
@@ -45,6 +46,8 @@ Please reach out for more information.
 <li><a href="https://doi.org/10.5194/gmd-11-1009-2018">Butchart et al., GMD, 2018</a>
 </ul>
 </pre>
+
+</font>
 
 </body>
 
