note for review

--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,8 @@ Click <a href="index.html">here</a> to go back to main page.
 
 <font size="+1">
 
-Here you can find a list of peer-reviewed publications. 
+Here you can find a list of peer-reviewed publications.
+A list of the journals I have reviewed for is <a href="https://publons.com/researcher/3116433/federico-serva/">here</a>.
 Please reach out for more information.
 
 
