--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <font size="+1">
 <pre>
 Currently I am a postdoctoral researcher at the
-<a href="https://philab.phi.esa.int/">ESA Philab</a> and the Italian Space Agency.
+<a href="https://philab.phi.esa.int/">ESA &Phi;-lab</a> and the Italian Space Agency.
 <br>
 My work is focused on the retrieval of parameters from multi and hyperspectral 
 imaging and on the study of weather and climate processes with AI.
