--- a/teaching.html
+++ b/teaching.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Federico's webpage: research</title>
+<title>Federico's webpage: teaching</title>
 </head>
 
 <body>
