--- a/publications.html
+++ b/publications.html
@@ -23,22 +23,22 @@ Please reach out for more information.
 <u>2021</u>
 <ul>
 <li><a href="https://doi.org/10.1088/1748-9326/ac0b6a">Cristofanelli et al., ERL, 2021</a>
-<li><a href="https://doi.org/10.1002/qj.4048">Anstey et al., QJ, 2021</a>
+<li><a href="https://doi.org/10.1002/qj.4048">Anstey et al., QJRMS, 2021</a>
 <li><a href="https://doi.org/10.5194/gmd-2020-446">Doescher et al., GMD, 2021</a>
 </ul> 
 
 <u>2020</u>
 <ul>
 <li><a href="https://doi.org/10.5194/gmd-13-3383-2020">Eyring et al., GMD, 2020</a>
-<li><a href="https://doi.org/10.1002/qj.3827">Holt et al., QJ, 2020</a>
-<li><a href="https://doi.org/10.1002/qj.3765">Bushell et al., QJ, 2020</a>
+<li><a href="https://doi.org/10.1002/qj.3827">Holt et al., QJRMS, 2020</a>
+<li><a href="https://doi.org/10.1002/qj.3765">Bushell et al., QJRMS, 2020</a>
 <li><a href="https://doi.org/10.1007/s00382-020-05131-7">Serva et al., CD, 2020</a>
-<li><a href="https://doi.org/10.1002/qj.3749">Richter et al., QJ, 2020</a>
+<li><a href="https://doi.org/10.1002/qj.3749">Richter et al., QJRMS, 2020</a>
 </ul>
 
 <u>2019</u>
 <ul>
-<li><a href="https://doi.org/10.1002/qj.3690">Smith et al., QJ, 2019</a>
+<li><a href="https://doi.org/10.1002/qj.3690">Smith et al., QJRMS, 2019</a>
 </ul>
 
 <u>2018</u>
