added DSJ work on C3S

--- a/publications.html
+++ b/publications.html
@@ -11,12 +11,13 @@ Click <a href="index.html">here</a> to go back to main page.
 <font size="+1">
 
 Here you can find a list of peer-reviewed publications.
-A list of the journals I have reviewed for is <a href="https://publons.com/researcher/3116433/federico-serva/">here</a>.
+A list of the journals I have reviewed for is available <a href="https://publons.com/researcher/3116433/federico-serva/">here</a>.
 Please reach out for more information.
 
 
 <u>2022</u>
 <ul>
+<li><a href="https://datascience.codata.org/article/10.5334/dsj-2022-010/">Lacagnina et al., DSJ, 2022</a>
 <li><a href="https://doi.org/10.1029/2021JD035220">Madonna et al., JGRA, 2022</a>
 </ul> 
 
