--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!--<a href="/about"><font size="+2">About</font></a>-->
 <a href="/research"><font size="+2">Research</font></a>
 <a href="/publications"><font size="+2">Publications</font></a>
+<a href="/software"><font size="+2">Software</font></a>
 <a href="/teaching"><font size="+2">Teaching</font></a>
 <!--<a href="/outreach"><font size="+2">Outreach</font></a>-->
 </p>
