--- a/software.html
+++ b/software.html
@@ -13,8 +13,8 @@ Click <a href="index.html">here</a> to go back to main page.
 Here you can find some software tools I've contributed to.
 
 <ul>
-<li><a href="https://zenodo.org/record/6359405">ESMValTool</a>
-<li><a href="https://zenodo.org/record/6353688">ece2cmor3</a>
+<li> `zmnam` diagnostic for annular modes in <a href="https://zenodo.org/record/6359405">ESMValTool</a>
+<li> CMORization of DynVarMIP outputs in <a href="https://zenodo.org/record/6353688">ece2cmor3</a>
 </ul> 
 
 </pre>
