--- a/software.html
+++ b/software.html
@@ -10,13 +10,13 @@ Click <a href="index.html">here</a> to go back to main page.
 
 <font size="+1">
 
-Here you can find some software tools I've contributed to.
+Here you can find some software projects I've contributed to.
 
 <ul>
-<li> `zmnam` diagnostic for annular modes in <a href="https://zenodo.org/record/6359405">ESMValTool</a>
+<li> Diagnostics `zmnam` for annular modes in <a href="https://zenodo.org/record/6359405">ESMValTool</a>
+<li> DynVarMIP diagnostics in <a href="www.ec-earth.org/cmip6/ec-earth-in-cmip6/">EC-Earth</a>
 <li> CMORization of DynVarMIP outputs in <a href="https://zenodo.org/record/6353688">ece2cmor3</a>
 </ul> 
-
 </pre>
 
 </font>
