--- a/software.html
+++ b/software.html
@@ -14,7 +14,7 @@ Here you can find some software projects I've contributed to.
 
 <ul>
 <li> Diagnostics `zmnam` for annular modes in <a href="https://zenodo.org/record/6359405">ESMValTool</a>
-<li> DynVarMIP diagnostics in <a href="www.ec-earth.org/cmip6/ec-earth-in-cmip6/">EC-Earth</a>
+<li> DynVarMIP diagnostics in <a href="http://www.ec-earth.org/cmip6/ec-earth-in-cmip6/">EC-Earth</a>
 <li> CMORization of DynVarMIP outputs in <a href="https://zenodo.org/record/6353688">ece2cmor3</a>
 </ul> 
 </pre>
