included T reanalysis intercomparison

--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,7 @@ Please reach out for more information.
 
 <u>2022</u>
 <ul>
+<li><a href="https://www.frontiersin.org/articles/10.3389/feart.2022.935139/"> Hesham et al., FEart, 2022</a>
 <li><a href="https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/qj.4287">Serva et al., QJRMS, 2022</a>
 <li><a href="https://datascience.codata.org/article/10.5334/dsj-2022-010/">Lacagnina et al., DSJ, 2022</a>
 <li><a href="https://doi.org/10.1029/2021JD035220">Madonna et al., JGRA, 2022</a>
