--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,7 @@ Please reach out for more information.
 
 <u>2022</u>
 <ul>
+<li><a href="https://journals.ametsoc.org/view/journals/bams/aop/BAMS-D-21-0109.1/BAMS-D-21-0109.1.xml">Yang et al., BAMS, 2022</a>
 <li><a href="https://www.frontiersin.org/articles/10.3389/feart.2022.935139/">Hesham et al., FEart, 2022</a>
 <li><a href="https://rmets.onlinelibrary.wiley.com/doi/abs/10.1002/qj.4287">Serva et al., QJRMS, 2022</a>
 <li><a href="https://datascience.codata.org/article/10.5334/dsj-2022-010/">Lacagnina et al., DSJ, 2022</a>
