added news section in home

--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
 
 <font size="+1">
 <pre>
-Currently I am a postdoctoral researcher at the
-<a href="https://philab.phi.esa.int/">ESA &Phi;-lab</a> and the Italian Space Agency.
+Currently I am a postdoctoral researcher at the <a href="https://philab.phi.esa.int/">ESA &Phi;-lab</a> and the Italian Space Agency.
 <br>
 My work is focused on the retrieval of parameters from multi and hyperspectral 
 imaging and on the study of weather and climate processes with AI.
 I am interested in climate modeling, model development and evaluation.
+
+
+Latest news:
+<ul>
+<li>August 2022: the <a href="https://www.iarai.ac.at/weather4cast/">weather4cast</a> competition is open at NeurIPS</li>
+<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> derived from the MERRA-2 reanalysis of NASA</li>
+<li>July 2022: new publication on the evaluation of climate variables in the <a href="https://doi.org/10.1175/BAMS-D-21-0109.1">BAMS</a> journal</li>
+<li><a href="https://publons.com/researcher/3116433/federico-serva/">Publons</a></li>
+</ul>
+
 </pre>
 </font>
 
