--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 Currently I am a postdoctoral researcher at the <a href="https://philab.phi.esa.int/">ESA &Phi;-lab</a> and the Italian Space Agency.
 <br>
 My work is focused on the retrieval of parameters from multi and hyperspectral 
-imaging and on the study of weather and climate processes with AI.
+imaging and on the study of weather and climate processes with machine learning.
 I am interested in climate modeling, model development and evaluation.
 
 
