--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <font size="+1">
 <pre>
-Currently I am a postdoctoral researcher at the <a href="https://philab.phi.esa.int/">ESA &Phi;-lab</a> and the Italian Space Agency.
+Currently I am a postdoctoral researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a> and the <a href="https://www.asi.it/">Italian Space Agency</a>.
 <br>
 My work is focused on the retrieval of parameters from multi and hyperspectral 
 imaging and on the study of weather and climate processes with machine learning.
@@ -52,7 +52,7 @@ Please find below my coordinates:
 <li><a href="mailto:federico.serva@terrarum.eu">E-mail</a></li>
 <li><a href="https://github.com/fserva">github</a></li>
 <li><a href="https://orcid.org/0000-0002-7118-0817">ORCID</a></li>
-<li><a href="https://publons.com/researcher/3116433/federico-serva/">Publons</a></li>
+<li><a href="https://www.webofscience.com/wos/author/record/2102507">Web of Science</a></li>
 </ul>
 </nav>
 
