added date of last test

--- a/software.html
+++ b/software.html
@@ -25,6 +25,7 @@ and some datasets I worked on:
 
 
 Note: to programmatically download multiple files from `zenodo` restricted access repositories, you will need the token received once access is granted.
+This procedure is working as of August 2022.
 
 First generate a cookie file for zenodo and your token with: 
 `curl -c zenodo-cookies.txt "https://zenodo.org/record/{record number}?token={your token}"`.
