updated index file

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
 <font size="+1">
 <pre>
-Currently I am a postdoctoral researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a> and the <a href="https://www.asi.it/">Italian Space Agency</a>.
+Currently I am a fixed-term researcher at the 
+<a href="https://www.cnr.it/en">National Research Council></a> and a visiting
+researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a>.
 <br>
-My work is focused on the retrieval of parameters from multi and hyperspectral 
-imaging and on the study of weather and climate processes with machine learning.
+My work is focused on the study of weather and climate processes
+by using observational and model datasets.
 I am interested in climate modeling, model development and evaluation.
 
 
