--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 <font size="+1">
 <pre>
 Currently I am a fixed-term researcher at the 
-<a href="https://www.cnr.it/en">National Research Council></a> and a visiting
-researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a>.
+<a href="https://www.cnr.it/en/">National Research Council></a> and a visiting researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a>.
 <br>
 My work is focused on the study of weather and climate processes
-by using observational and model datasets.
+by using observational and model-based datasets.
 I am interested in climate modeling, model development and evaluation.
 
 
