--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,10 @@ Here you can find a list of peer-reviewed publications.
 A list of the journals I have reviewed for is available <a href="https://publons.com/researcher/3116433/federico-serva/">here</a>.
 Please reach out for more information.
 
+<u>2023</u>
+<ul>
+<li><a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057"Madonna et al., JGRA, 2023</a>
+</ul>
 
 <u>2022</u>
 <ul>
