--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@ Please reach out for more information.
 
 <u>2023</u>
 <ul>
-<li><a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057"Madonna et al., JGRA, 2023</a>
+<li><a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">Madonna et al., JGRA, 2023</a>
 </ul>
 
 <u>2022</u>
