--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@ I am interested in climate modeling, model development and evaluation.
 
 Latest news:
 <ul>
+<li> September 2023: proceedings for weather4cast 2022 published in <a href="https://proceedings.mlr.press/v220/gruca22a.html">PMLR </a></li>
 <li>May 2023: new publication on uncertainty in temperature extremes in the
 <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">JGRA</a> journal</li>
 <li>August 2022: the <a href="https://www.iarai.ac.at/weather4cast/">weather4cast</a> competition is open at NeurIPS</li>
-<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> derived from the MERRA-2 reanalysis of NASA</li>
+<!--<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> 
+derived from the MERRA-2 reanalysis of NASA</li>-->
 </ul>
 </pre>
 </font>
