--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,8 @@ Please reach out for more information.
 
 <u>2023</u>
 <ul>
+<li><a href="https://proceedings.mlr.press/v220/gruca22a.html">Gruca et al., PMLR, 2023</a>
+<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-25755-1_24">Serva et al., AII2022, 2023</a>
 <li><a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">Madonna et al., JGRA, 2023</a>
 </ul>
 
