--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <font size="+1">
 <pre>
-Currently I am a fixed-term researcher at the 
+Currently I am a researcher (non-tenured) at the 
 <a href="https://www.cnr.it/en/">National Research Council</a> and a visiting researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a>.
 <br>
 My work is focused on the study of weather and climate processes
@@ -35,10 +35,13 @@ I am interested in climate modeling, model development and evaluation.
 
 Latest news:
 <ul>
-<li>October 2023: new edition of the <a href="https://weather4cast.net/">weather4cast</a> competition at NeurIPS 2023</li>
-<li>September 2023: proceedings for weather4cast 2022 published in <a href="https://proceedings.mlr.press/v220/gruca22a.html">PMLR</a></li>
-<li>May 2023: new publication on uncertainty in temperature extremes in the
-<a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">JGRA</a> journal</li>
+<li> April 2024: new publication on the stratosphere of the EC-Earth model in <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003756">JAMES</a> journal </li>
+<li>December 2023: <a href="https://weather4cast.net/">weather4cast</a> @ NeurIPS </li>
+<li> October 2023: new publication on the Mediterranean marine heatwave in <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad02ae">ERL</a> journal </li>
+<!--<li>October 2023: new edition of the <a href="https://weather4cast.net/">weather4cast</a> competition at NeurIPS 2023</li>>-->
+<!--<li>September 2023: proceedings for weather4cast 2022 published in <a href="https://proceedings.mlr.press/v220/gruca22a.html">PMLR</a></li>-->
+<!--<li>May 2023: new publication on uncertainty in temperature extremes in the
+<a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">JGRA</a> journal</li>-->
 <!--<li>August 2022: the <a href="https://www.iarai.ac.at/weather4cast/">weather4cast</a> competition is open at NeurIPS</li>-->
 <!--<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> 
 derived from the MERRA-2 reanalysis of NASA</li>-->
@@ -58,7 +61,7 @@ Please find below my coordinates:
 <li><a href="https://www.webofscience.com/wos/author/record/2102507">Web of Science</a></li>
 </ul>
 <br>
-Last modified: September 2023
+Last modified: April 2024
 </nav>
 </body>
 </html>
