--- a/publications.html
+++ b/publications.html
@@ -14,8 +14,19 @@ Here you can find a list of peer-reviewed publications.
 A list of the journals I have reviewed for is available <a href="https://publons.com/researcher/3116433/federico-serva/">here</a>.
 Please reach out for more information.
 
+<!--<li><a href="https://link/to/paper">Doe et al., 1970</a>-->
+
+<u>2024</u>
+<ul>
+<li><a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003756">Serva et al., JAMES, 2024</a>
+<li><a href="https://rmets.onlinelibrary.wiley.com/doi/10.1002/joc.8331">Sy et al., IJoC, 2024</a>
+</ul>
+
+
 <u>2023</u>
 <ul>
+<li><a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad02ae">Marullo et al., ERL, 2023</a>
+<li><a href="https://link.springer.com/chapter/10.1007/978-3-031-37818-8_34">Snels et al., IILRC, 2023</a>
 <li><a href="https://proceedings.mlr.press/v220/gruca22a.html">Gruca et al., PMLR, 2023</a>
 <li><a href="https://link.springer.com/chapter/10.1007/978-3-031-25755-1_24">Serva et al., AII2022, 2023</a>
 <li><a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">Madonna et al., JGRA, 2023</a>
