--- a/software.html
+++ b/software.html
@@ -20,7 +20,9 @@ Here you can find some software projects I've contributed to:
 
 and some datasets I worked on:
 <ul>
+<li> Marine heatwaves and cold spells from satellite sea surface temperatures by <a href="https://zenodo.org/records/8154587">ESA</a>
 <li> MERRA-2 TEM variables for <a href="https://zenodo.org/record/6959944">DynVar</a>
+<li> ERA5 TEM variables for <a href="https://zenodo.org/records/7081436">DynVar</a>
 </ul>
 
 
