--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <a href="/publications"><font size="+2">Publications</font></a>
 <a href="/software"><font size="+2">Software</font></a>
 <a href="/teaching"><font size="+2">Teaching</font></a>
+<a href="/news_archive"><font size="+2">News archive</font></a>
+
 <!--<a href="/outreach"><font size="+2">Outreach</font></a>-->
 </p>
 </body>
@@ -35,16 +37,8 @@ I am interested in climate modeling, model development and evaluation.
 
 Latest news:
 <ul>
-<li> April 2024: new publication on the stratosphere of the EC-Earth model in <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003756">JAMES</a> journal </li>
-<li> December 2023: <a href="https://weather4cast.net/">weather4cast</a> @ NeurIPS </li>
-<li> October 2023: new publication on the Mediterranean marine heatwave in <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad02ae">ERL</a> journal </li>
-<!--<li>October 2023: new edition of the <a href="https://weather4cast.net/">weather4cast</a> competition at NeurIPS 2023</li>>-->
-<!--<li>September 2023: proceedings for weather4cast 2022 published in <a href="https://proceedings.mlr.press/v220/gruca22a.html">PMLR</a></li>-->
-<!--<li>May 2023: new publication on uncertainty in temperature extremes in the
-<a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">JGRA</a> journal</li>-->
-<!--<li>August 2022: the <a href="https://www.iarai.ac.at/weather4cast/">weather4cast</a> competition is open at NeurIPS</li>-->
-<!--<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> 
-derived from the MERRA-2 reanalysis of NASA</li>-->
+<li> July 2025: new MUMUCD <a href="https://ieeexplore.ieee.org/document/11071316">publication</a> and <a href="https://zenodo.org/records/10674011">dataset</a> for satellite change detection</li>
+<li> March 2025: new <a href="https://wcd.copernicus.org/articles/6/329/2025/">publication</a> on sudden warmings online in the Weather and Climate Dynamics journal
 </ul>
 </pre>
 </font>
@@ -61,7 +55,7 @@ Please find below my coordinates:
 <li><a href="https://www.webofscience.com/wos/author/record/2102507">Web of Science</a></li>
 </ul>
 <br>
-Last modified: April 2024
+Last modified: August 2025
 </nav>
 </body>
 </html>
