--- a/news_archive.html
+++ b/news_archive.html
@@ -10,7 +10,6 @@ Click <a href="index.html">here</a> to go back to main page.
 
 <font size="+1">
 Previous news are archived here:
-
 <ul>
 <li> April 2024: new publication on the stratosphere of the EC-Earth model in <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2023MS003756">JAMES</a> journal </li>
 <li> December 2023: <a href="https://weather4cast.net/">weather4cast</a> @ NeurIPS </li>
@@ -20,8 +19,7 @@ Previous news are archived here:
 <li>May 2023: new publication on uncertainty in temperature extremes in the
 <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2022JD038057">JGRA</a> journal</li>
 <li>August 2022: the <a href="https://www.iarai.ac.at/weather4cast/">weather4cast</a> competition is open at NeurIPS</li>
-<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> 
-derived from the MERRA-2 reanalysis of NASA</li>
+<li>August 2022: released <a href="https://zenodo.org/record/6959944">TEM data</a> derived from the MERRA-2 reanalysis of NASA</li>
 </ul>
 
 </font>
