--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
 <font size="+1">
 <pre>
-Currently I am a researcher (non-tenured) at the 
-<a href="https://www.cnr.it/en/">National Research Council</a> and a visiting researcher at the <a href="https://philab.esa.int/">ESA &Phi;-lab</a>.
+Currently I am a researcher (non-tenured) at the <a href="https://www.cnr.it/en/">National Research Council</a>.
 <br>
 My work is focused on the study of weather and climate processes
 by using observational and model-based datasets.
